Bug 266456 - Message list tabs icons are not refreshed when changing the current one.
Summary: Message list tabs icons are not refreshed when changing the current one.
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 2.0.89
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-16 14:24 UTC by Christophe Marin
Modified: 2011-09-13 11:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2011-02-16 14:24:29 UTC
* middle click on a folder name to open the messages list in a new tab,
* Change the icon for this folder.
→ The tab icon is not changed
Comment 1 Laurent Montel 2011-02-17 20:44:34 UTC
Same for kmail1
Will look at it
Comment 2 Laurent Montel 2011-07-06 22:03:53 UTC
Fixed in kmail1 but not in kmail2 will look at how to update it
Comment 3 Laurent Montel 2011-09-13 11:19:52 UTC
Git commit 7f030e76574e07f440c0d3e75778496406409177 by Montel Laurent.
Committed on 13/09/2011 at 13:14.
Pushed by mlaurent into branch 'master'.

Fix Bug 266456 - Message list tabs icons are not refreshed when changing the current one.

FIXED-IN: 4.7.2
BUG: 266456

M  +2    -1    kmail/kmmainwidget.cpp
M  +29   -0    messagelist/pane.cpp
M  +2    -1    messagelist/pane.h

http://commits.kde.org/kdepim/7f030e76574e07f440c0d3e75778496406409177
Comment 4 Laurent Montel 2011-09-13 11:20:47 UTC
Git commit 7244d686fa869422e1a1d501416cd2ca1cf76c8f by Montel Laurent.
Committed on 13/09/2011 at 13:14.
Pushed by mlaurent into branch '4.7'.

Fix Bug 266456 - Message list tabs icons are not refreshed when changing the current one.

FIXED-IN: 4.7.2
BUG: 266456
(cherry picked from commit 7f030e76574e07f440c0d3e75778496406409177)

M  +2    -1    kmail/kmmainwidget.cpp
M  +29   -0    messagelist/pane.cpp
M  +2    -1    messagelist/pane.h

http://commits.kde.org/kdepim/7244d686fa869422e1a1d501416cd2ca1cf76c8f