Fix Bug 266456 - Message list tabs icons are not refreshed when changing the current one.

FIXED-IN: 4.7.2
BUG: 266456
(cherry picked from commit 7f030e76574e07f440c0d3e75778496406409177)